--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,12 +1,7 @@
 .page {
   max-width:1280px;
+  min-width: 320px;
+  width: 100%;
   margin: auto;
-  font-family: 'Inter';
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  text-rendering:optimizeLegibility;
-  background-color: #2A2C2F;
+  color: #fff;
 }
