--- a/blocks/footer/__nav-link/footer__nav-link.css
+++ b/blocks/footer/__nav-link/footer__nav-link.css
@@ -1,9 +1,9 @@
 .footer__nav-link {
   text-decoration: none;
   color: #fff;
-  margin: 0 18px 0 0;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 112%;
+  cursor: pointer;
 }
