--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   font-style: normal;
   font-weight: normal;
-  min-width: 484px;
+  max-width: 484px;
   font-size: 18px;
   line-height: 163%;
   margin: 0 0 25px;
