--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,5 +1,5 @@
 .place {
-  max-width: 984px;
+  width: 100%;
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
