--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,8 @@
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
 @import url(../blocks/lead/lead.css);
+/*imports*/
+
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
@@ -39,3 +41,202 @@
 @import url(../blocks/footer/__nav/footer__nav.css);
 @import url(../blocks/footer/__nav-link/footer__nav-link.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
+
+/*media queries*/
+
+@media screen and (max-width:1024px) {
+  .lead__title {
+    margin-top: 50px;
+  }
+  .lead__image {
+    max-width: 928px;
+    max-height: 580px;
+    margin-top: 56px;
+  }
+  .intro {
+    margin: 92px auto 0 48px;
+  }
+  .photo-grid {
+    gap: 14px;
+  }
+  .places {
+    max-width: 928px;
+  }
+  .place__link {
+    margin-top: 12px;
+  }
+  .cover {
+    max-width: 1024px;
+    min-height: 640px;
+    margin: 92px 0 0;
+  }
+  .footer {
+    margin: 92px 48px 24px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .header {
+    margin: 34px 24px 0;
+  }
+  .lead__image {
+    max-width: 768px;
+    max-height: 480px;
+    margin-top: 56px;
+  }
+  .lead__caption {
+    margin-left: 24px;
+  }
+  .intro {
+    max-width: 720px;
+    margin: 88px auto 0;
+  }
+  .intro__subtitle {
+    max-width: 720px;
+  }
+  .intro__paragraph {
+    max-width: 720px;
+  }
+  .intro__list {
+    max-width: 720px;
+  }
+  .photo-grid {
+    margin: 88px 24px 0;
+    gap: 14px;
+  }
+  .places {
+    margin-top: 88px;
+    max-width: 720px;
+  }
+  .place {
+    margin-bottom: 72px;
+  }
+  .place__title {
+    font-size: 42px;
+    line-height: 110%;
+  }
+  .place__url-heading {
+    line-height: 100%;
+  }
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 163%;
+  }
+  .cover {
+    max-width: 768px;
+    min-height: 480px;
+    margin: 89px 0 0;
+  }
+  .footer {
+    margin: 88px 24px 24px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .header {
+    margin: 20px 16px 0;
+  }
+  .logo {
+    width: 156px;
+    height: 36px;
+  }
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
+  .lead__title {
+    font-size: 40px;
+    line-height: 110%;
+  }
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 125%;
+    margin: 16px 16px 0;
+  }
+  .lead__image {
+    max-width: 320px;
+    max-height: 200px;
+    margin-top: 40px;
+  }
+  .lead__caption {
+    margin-left: 16px;
+  }
+  .intro {
+    max-width: 288px;
+    margin: 64px auto 0;
+  }
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+  .intro__subtitle {
+    max-width: 288px;
+    line-height: 125%;
+  }
+  .intro__paragraph {
+    max-width: 288px;
+  }
+  .intro__list {
+    max-width: 288px;
+    margin-top: 34px
+  }
+  .photo-grid {
+    margin: 64px 16px 0;
+    gap: 12px;
+  }
+  .places {
+    margin: 64px 0 0;
+    max-width: 320px;
+  }
+  .place {
+    margin-bottom: 48px;
+    row-gap: 30px;
+  }
+  .place__title {
+    font-size: 32px;
+    line-height: 109%;
+    margin: 0 16px;
+  }
+  .place__website {
+    margin: 0 16px;
+  }
+  .place__paragraph-container {
+    margin: 0;
+  }
+  .place__paragraph {
+    margin: 0 16px 25px;
+    font-size: 16px;
+    line-height: 163%;
+  }
+  .cover {
+    max-width: 320px;
+    min-height: 200px;
+    margin: 64px 0 0;
+  }
+  .cover__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+  .cover__subtitle {
+    margin: 16px 16px 0;
+    font-size: 14px;
+    line-height: 114%;
+  }
+  .footer {
+    flex-direction: column;
+    margin: 64px 139px 24px 16px;
+    align-items: flex-start;
+  }
+  .footer__nav {
+    flex-direction: column;
+  }
+  .footer__nav-link {
+    font-size: 24px;
+    line-height: 100%;
+  }
+  .footer__copyright {
+    margin-top: 48px;
+    font-size: 14px;
+    line-height: 100%;
+  }
+}
