--- a/pages/index.css
+++ b/pages/index.css
@@ -178,7 +178,7 @@
   }
   .intro__list {
     max-width: 288px;
-    margin-top: 34px
+    margin-top: 34px;
   }
   .photo-grid {
     margin: 64px 16px 0;
