--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,14 +1,33 @@
 .cover__overlay {
   background: rgba(42, 44, 47, 0.3);
   content:'';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  max-width: 1184px;
+  min-height: 740px;
+  width: 100%;
   transition: 0.5s;
 }
 
 .cover__overlay:hover {
   background: rgba(42, 44, 47, 0.8);
+}
+
+@media screen and (max-width:1024px) {
+  .cover__overlay {
+    max-width: 1024px;
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .cover__overlay {
+    max-width: 768px;
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .cover__overlay {
+    max-width: 320px;
+    min-height: 200px;
+  }
 }
