--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,6 +7,13 @@
   margin: 32px 0 0;
   padding: 0;
   max-width: 320px;
-
   text-align: center;
+}
+
+@media screen and (max-width:320px) {
+  .cover__subtitle {
+    margin: 16px 16px 0;
+    font-size: 14px;
+    line-height: 114%;
+  }
 }
