--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,7 +4,6 @@
   width: 100%;
   background-image: url(../../images/cover-route-66.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
   display: flex;
   flex-direction: column;
@@ -12,4 +11,28 @@
   align-items: center;
   position: relative;
   margin: 92px auto 0;
+}
+
+@media screen and (max-width:1024px) {
+  .cover {
+    max-width: 1024px;
+    min-height: 640px;
+    margin: 92px 0 0;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .cover {
+    max-width: 768px;
+    min-height: 480px;
+    margin: 89px 0 0;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .cover {
+    max-width: 320px;
+    min-height: 200px;
+    margin: 64px 0 0;
+  }
 }
