--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,3 +7,11 @@
   line-height: 114%;
   text-align: right;
 }
+
+@media screen and (max-width:320px) {
+  .footer__copyright {
+    margin-top: 48px;
+    font-size: 14px;
+    line-height: 100%;
+  }
+}
