--- a/blocks/footer/__nav-link/footer__nav-link.css
+++ b/blocks/footer/__nav-link/footer__nav-link.css
@@ -7,3 +7,10 @@
   line-height: 112%;
   cursor: pointer;
 }
+
+@media screen and (max-width:320px) {
+  .footer__nav-link {
+    font-size: 24px;
+    line-height: 100%;
+  }
+}
