--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -6,3 +6,16 @@
   padding: 0;
   max-width: 670px;
 }
+
+@media screen and (max-width:768px) {
+  .intro__list {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .intro__list {
+    max-width: 288px;
+    margin-top: 34px;
+  }
+}
