--- a/blocks/intro/__paragraph/intro__paragraph.css
+++ b/blocks/intro/__paragraph/intro__paragraph.css
@@ -6,3 +6,15 @@
   margin: 32px 0 0;
   padding: 0;
 }
+
+@media screen and (max-width:768px) {
+  .intro__paragraph {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .intro__paragraph {
+    max-width: 288px;
+  }
+}
