--- a/blocks/intro/__subtitle/intro__subtitle.css
+++ b/blocks/intro/__subtitle/intro__subtitle.css
@@ -7,3 +7,16 @@
   padding: 0;
   max-width: 690px;
 }
+
+@media screen and (max-width:768px) {
+  .intro__subtitle {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .intro__subtitle {
+    max-width: 288px;
+    line-height: 125%;
+  }
+}
