--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,3 +6,10 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width:320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+}
