--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,3 +2,23 @@
   max-width: 690px;
   margin: 92px auto 0 148px;
 }
+
+@media screen and (max-width:1024px) {
+  .intro {
+    margin: 92px auto 0 48px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .intro {
+    max-width: 720px;
+    margin: 88px auto 0;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .intro {
+    max-width: 288px;
+    margin: 64px auto 0;
+  }
+}
