--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -8,3 +8,16 @@
   margin: 0 auto;
   padding: 0;
 }
+
+@media screen and (max-width:1024px) {
+  .lead__title {
+    margin-top: 50px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 110%;
+  }
+}
