--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,3 +5,23 @@
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
 }
+
+@media screen and (max-width:1024px) {
+  .photo-grid {
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .photo-grid {
+    margin: 88px 24px 0;
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .photo-grid {
+    margin: 64px 16px 0;
+    gap: 12px;
+  }
+}
