--- a/blocks/place/__paragraph-container/place__paragraph-container.css
+++ b/blocks/place/__paragraph-container/place__paragraph-container.css
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width:320px) {
+  .place__paragraph-container {
+    margin: 0;
+  }
+}
