--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,3 +11,18 @@
 .place__paragraph:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width:768px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .place__paragraph {
+    margin: 0 16px 25px;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
