--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,18 @@
   margin: 0;
   padding: 0;
 }
+
+@media screen and (max-width:768px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 110%;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 109%;
+    margin: 0 16px;
+  }
+}
