--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,3 +11,16 @@
 .place:last-of-type {
   margin-bottom: 0;
 }
+
+@media screen and (max-width:768px) {
+  .place {
+    margin-bottom: 72px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .place {
+    margin-bottom: 48px;
+    row-gap: 30px;
+  }
+}
