--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -4,3 +4,23 @@
   flex-direction: column;
   margin: 92px auto 0;
 }
+
+@media screen and (max-width:1024px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .places {
+    margin-top: 88px;
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width:320px) {
+  .places {
+    margin: 64px 0 0;
+    max-width: 320px;
+  }
+}
