--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,6 +6,11 @@
   line-height: 28px;
   text-align: right;
   cursor: pointer;
+  transition: 0.2s;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width:320px) {
