--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,9 +7,15 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width:1024px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width:768px) {
   .header {
-    margin: 34px 24px 0;
+    max-width: 720px;
   }
 }
 
