--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -6,24 +6,22 @@
 
 @media screen and (max-width:1024px) {
   .lead__image {
-    max-width: 928px;
+    width: 100%;
     max-height: 580px;
-    margin-top: 56px;
+    margin: 56px 48px 0;
   }
 }
 
 @media screen and (max-width:768px) {
   .lead__image {
-    max-width: 768px;
     max-height: 480px;
-    margin-top: 56px;
+    margin: 56px 0 0;
   }
 }
 
 @media screen and (max-width:320px) {
   .lead__image {
-    max-width: 320px;
     max-height: 200px;
-    margin-top: 40px;
+    margin: 40px 0 0;
   }
 }
