--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,6 +7,11 @@
   margin-top: 4px;
   text-decoration-line: underline;
   cursor: pointer;
+  transition: 0.2s;
+}
+
+.place__link:hover {
+  opacity: 0.8;
 }
 
 @media screen and (max-width:1024px) {
