--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -12,9 +12,16 @@
   margin-bottom: 0;
 }
 
+@media screen and (max-width:1024px) {
+  .place {
+    column-gap: 32px;
+  }
+}
+
 @media screen and (max-width:768px) {
   .place {
     margin-bottom: 72px;
+    column-gap: 28px;
   }
 }
 
