--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -15,6 +15,12 @@
   }
 }
 
+@media screen and (max-width:418px) {
+  .lead__title {
+    font-size: 70px;
+  }
+}
+
 @media screen and (max-width:320px) {
   .lead__title {
     font-size: 40px;
